Добавлены выпадающие меню в хедере

--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -57,6 +57,7 @@ $bgcolor:#263238; //цвет футера и меню
 
 .header {
 
+
   &__top {
     background-color: #fff;
   }
@@ -70,7 +71,7 @@ $bgcolor:#263238; //цвет футера и меню
 
   &__text {
     margin-left : auto;
-    margin-right: 50px;
+    margin-right: 14px;
     font-size   : 1.5rem;
     line-height : 24px;
     color       : #546e7a;
@@ -91,22 +92,504 @@ $bgcolor:#263238; //цвет футера и меню
 
   &__btn_green {
     background-color: #8bc34a;
-    padding         : 12px 21px 9px;
+    padding         : 4px 21px 4px;
   }
 
 
-  &__btn_red {
+  &__btn_red,
+  .header__btn-logout {
     background-color: #e74c3c;
-    padding         : 11px 14px 10px;
+    padding         : 4px 14px 4px;
   }
 
   &__bottom {
     background-color: $bgcolor;
   }
 
+  &__box {
+    min-width      : 400px;
+    height         : 45px;
+    display        : flex;
+    justify-content: flex-end;
+    align-items    : center;
+  }
+
+  &__circle {
+    &.active {
+      display: block;
+    }
+
+    display         : none;
+    height          : 34px;
+    width           : 34px;
+    background-color: #f5f5f5;
+    border-radius   : 50%;
+    margin-left     : 5px;
+    margin-right    : 10px;
+    position        : relative;
+
+    &::before {
+      position : absolute;
+      top      : 50%;
+      left     : 50%;
+      transform: translate(-50%, -50%);
+      color    : #a0a0a0;
+      font-size: 1.4rem;
+    }
+
+    span {
+      position     : absolute;
+      width        : 18px;
+      height       : 18px;
+      border-radius: 50%;
+      text-align   : center;
+      line-height  : 18px;
+      right        : -7px;
+      top          : -7px;
+      font-size    : 1.1rem;
+      font-family  : 'Open Sans', sans-serif;
+      color        : #fff;
+    }
+  }
+
 }
 
+.header__btn-ligin--on {
+  display: none;
+
+  &.header__btn_red {
+    display: none;
+  }
+
+  &.header__btn-logout {
+    display: block;
+  }
+
+}
+
+.header__btn-logout {
+  display: none;
+}
+
+
+
+.user {
+  display: none;
+
+
+  &.active {
+    display: block;
+  }
+
+  margin-left  : 10px;
+  margin-right : 25px;
+  padding-right: 25px;
+
+  &__inner {
+    display    : flex;
+    align-items: center;
+  }
+
+  &__image {
+    margin-right : 15px;
+    width        : 34px;
+    height       : 34px;
+    border-radius: 50%;
+    overflow     : hidden;
+  }
+
+  &__info {
+    position: relative;
+    font-family: "Roboto",
+      sans-serif;
+    font-size  : 1.4rem;
+    line-height: 24px;
+  }
+
+  &__name {
+    font-weight: 500;
+    color      : #222222;
+  }
+
+  &__money {
+    color      : #8bc34a;
+    font-weight: 700;
+
+  }
+
+  &__box {
+    position: relative;
+
+    &:hover {
+      .user__menu {
+        visibility: visible;
+      }
+    }
+  }
+
+  &__menu {
+    visibility: hidden;
+    @include anim(0.3s, 0s);
+    position        : absolute;
+    top             : 69px;
+    right           : 6px;
+    background-color: #fff;
+    width           : 170px;
+    z-index         : 5;
+    padding-bottom  : 18px;
+    padding-top     : 12.5px;
+    border-width    : 0.833px;
+    border-color    : #cccccc;
+    border-style    : solid;
+    box-shadow      : 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+    font-size       : 1.2rem;
+    font-family     : "Roboto", sans-serif;
+
+
+    a:hover {
+      color: #8bc34a;
+    }
+
+    i {
+      padding-right: 10px;
+      margin-left  : 20px;
+      color        : #a2cf6e;
+      font-size    : 14px;
+      font-family  : icomoon;
+    }
+
+    li {
+      padding: 12.5px 0px;
+    }
+  }
+}
+
+.icon-angle-down {
+  position : absolute;
+  top      : 3px;
+  right    : -16px;
+  font-size: 1.6rem;
+  color    : #707070;
+}
+
+.notification {
+  span {
+    background-color: #fcb322;
+  }
+
+  &:hover::before {
+    color: #000;
+  }
+
+  &__box {
+    position: relative;
+
+    &:hover {
+      .notification__menu {
+        visibility: visible;
+      }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    @include anim(0.3s, 0s);
+    visibility      : hidden;
+    top             : 62px;
+    right           : 10px;
+    border-width    : 0.833px;
+    border-bottom   : none;
+    border-color    : #cccccc;
+    border-style    : solid;
+    background-color: #fff;
+    width           : 270px;
+    z-index         : 5;
+    box-shadow      : 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+    padding-bottom  : 10px;
+  }
+
+  &__item {
+    display     : flex;
+    align-items : center;
+    padding-left: 20px;
+    height      : 87px;
+    border-top  : 1px solid #cccccc;
+  }
+
+  &__image {
+    width        : 47px;
+    height       : 47px;
+    border-radius: 50%;
+    overflow     : hidden;
+  }
+
+  &__content {
+    display       : flex;
+    flex-direction: column;
+    padding-left  : 20px;
+    margin-right  : auto;
+  }
+
+  &__help {
+    font-size: 1.1rem;
+    font-family: "Roboto",
+      sans-serif;
+    color      : #84b743;
+    line-height: 24px;
+  }
+
+  &__date {
+    font-size: 1rem;
+    font-family: "Roboto",
+      sans-serif;
+    color: #707070;
+  }
+
+  &__icon {
+    padding-right: 30px;
+    font-size    : 1.6rem;
+    color        : #b0bec5;
+
+    &.active {
+      color: #ef6c00;
+    }
+  }
+}
+
+
+
+.message {
+  span {
+    background-color: #ef6c00;
+  }
+
+  &:hover::before {
+    color: #000;
+  }
+
+  &__box {
+    position: relative;
+
+    &:hover {
+      .message__menu {
+        visibility: visible;
+      }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    @include anim(0.3s, 0s);
+    visibility      : hidden;
+    top             : 62px;
+    right           : 10px;
+    border-width    : 0.833px;
+    border-bottom   : none;
+    border-color    : #cccccc;
+    border-style    : solid;
+    background-color: #fff;
+    width           : 270px;
+    z-index         : 5;
+    box-shadow      : 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+    padding-bottom  : 10px;
+  }
+
+  &__item {
+    display     : flex;
+    align-items : center;
+    padding-left: 20px;
+    height      : 87px;
+    border-top  : 1px solid #cccccc;
+  }
+
+  &__image {
+    width        : 47px;
+    height       : 47px;
+    border-radius: 50%;
+    overflow     : hidden;
+
+  }
+
+  &__content {
+    display       : flex;
+    flex-direction: column;
+    padding-left  : 20px;
+    margin-right  : auto;
+  }
+
+  &__name {
+    font-size  : 1.2rem;
+    font-family: "Roboto", sans-serif;
+    color      : #263238;
+    font-weight: 700;
+  }
+
+  &__help {
+    font-size  : 1.1rem;
+    font-family: "Roboto", sans-serif;
+    color      : #84b743;
+    line-height: 24px;
+
+
+  }
+
+  &__date {
+    font-size  : 1rem;
+    font-family: "Roboto", sans-serif;
+    color      : #707070;
+
+
+  }
+
+  &__icon {
+    padding-right: 30px;
+    font-size    : 1.6rem;
+    color        : #b0bec5;
+
+    &.active {
+      color: #ef6c00;
+    }
+  }
+}
+
+.basket {
+  span {
+    background-color: #bfde9c;
+  }
+
+  &:hover::before {
+    color: #000;
+  }
+
+  &__content {
+    padding-left: 15px;
+  }
+
+  &__box {
+    position: relative;
+
+    &:hover {
+      .basket__menu {
+        visibility: visible;
+      }
+    }
+  }
+
+  &__menu {
+    @include anim(0.5s, 0s);
+    visibility      : hidden;
+    position        : absolute;
+    top             : 62px;
+    right           : 6px;
+    border-width    : 0.833px;
+    border-color    : #cccccc;
+    border-style    : solid;
+    background-color: #fff;
+    width           : 270px;
+    z-index         : 5;
+    box-shadow      : 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+    padding-bottom  : 10px;
+
+  }
+
+  &__item {
+    display      : flex;
+    align-items  : center;
+    padding      : 20px;
+    border-bottom: 0.833px solid #cccccc;
+  }
+
+  &__image {
+    width : 73px;
+    height: auto;
+  }
+
+  &__title,
+  &__price {
+    font-size: 1.5rem;
+    font-family: "Roboto",
+      sans-serif;
+    font-weight: 500;
+    color      : #263238;
+  }
+
+  &__category {
+    font-size: 1.2rem;
+    font-family: "Roboto",
+      sans-serif;
+    color      : #8bc34a;
+    line-height: 22px;
+  }
+
+  &__price {}
+
+  &__total {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    line-height    : 50px;
+    padding        : 0px 35px 0px 25px;
+  }
+
+  &__btn {
+    font-size: 1.4rem;
+    font-family: "Roboto",
+      sans-serif;
+    color      : #f4f6f5;
+    font-weight: 700;
+  }
+
+
+
+}
+
+.total {
+
+  &__title {
+    margin-right: 20px;
+  }
+
+  &__title,
+  &__price {
+    font-size  : 1.6rem;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    color      : #263238;
+  }
+
+
+
+  &__price {}
+}
+
+.btn {
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+  padding-left   : 16px;
+
+  &__card {
+    display     : inline-block;
+    padding     : 10px 22px 10px 20px;
+    margin-right: 5px;
+    margin-left : 17px;
+    background  : #95c85a;
+  }
+
+  &__checkout {
+    display         : inline-block;
+    padding         : 10px;
+    background-color: #e85647;
+    margin-right    : 15px;
+  }
+}
+
+/////////////////////////////////
+.message {}
+
 .basket {}
+
+.user {}
 
 .menu {
 
@@ -115,7 +598,6 @@ $bgcolor:#263238; //цвет футера и меню
     display    : flex;
     align-items: center;
 
-    // justify-content: center;
     li {
       display: inline-block;
 
@@ -252,14 +734,9 @@ $bgcolor:#263238; //цвет футера и меню
     margin         : 0px -15px;
   }
 
-  &__item {}
-
   &__column {
     flex   : 0 1 25%;
     padding: 0px 15px;
-
-
-
   }
 
   &__btn-bottom {
@@ -345,8 +822,6 @@ $bgcolor:#263238; //цвет футера и меню
       sans-serif;
   }
 
-
-
   &__price {
     padding    : 35px 30px 0px 0px;
     font-size  : 20px;
@@ -413,10 +888,7 @@ $bgcolor:#263238; //цвет футера и меню
     display        : flex;
     justify-content: space-between;
   }
-
-  &__item {}
 }
-
 
 .slick-slider {
   position : relative;
@@ -474,17 +946,14 @@ $bgcolor:#263238; //цвет футера и меню
       }
     }
   }
-
-
 }
 
 //====================================================================================================
 //sections advantages
 //====================================================================================================
 .advantages {
-  background-color   : #263238;
-  // padding         : 120px 0px;
-  padding            : 124px 0px 109px 0px;
+  background-color: #263238;
+  padding         : 124px 0px 109px 0px;
 
   &__title {
     color         : #fff;
@@ -496,9 +965,8 @@ $bgcolor:#263238; //цвет футера и меню
   }
 
   &__column {
-    padding-top       : 45px;
-    flex              : 0 1 33.3333%;
-    // justify-content: center;
+    padding-top: 45px;
+    flex       : 0 1 33.3333%;
   }
 
   &__item {
@@ -554,11 +1022,7 @@ $bgcolor:#263238; //цвет футера и меню
     font-family: "Roboto", sans-serif;
     color      : #ffffff;
     @include anim(0.3s, 0s);
-
-
   }
-
-
 
   &__text {
     padding-top: 25px;
@@ -663,28 +1127,31 @@ $bgcolor:#263238; //цвет футера и меню
   }
 }
 
-
-
 //====================================================================================================
 //section footer
 //====================================================================================================
 .footer {
   background-color: #263238;
-  padding         : 100px 0px 90px 0px;
+  padding         : 90px 0px 0px 0px;
 
   &__row {
     display        : flex;
     justify-content: space-between;
+    padding        : 0px 0px 90px 0px;
   }
+
+
 
   &__column {
     max-width: 270px;
   }
 
-  &__item {}
+  &__item {
+    padding: 25px 0px 0px 0px;
+  }
 
   &__title {
-    padding : 15px 0px 25px 0px;
+    padding : 0px 0px 25px 0px;
     position: relative;
 
     &::after {
@@ -723,6 +1190,10 @@ $bgcolor:#263238; //цвет футера и меню
     padding : 35px 0px 0px 30px;
     position: relative;
 
+    &:hover {
+      color: #b7c3c8;
+    }
+
     &::before {
       content    : '\f041';
       font-size  : 1.8rem;
@@ -738,6 +1209,10 @@ $bgcolor:#263238; //цвет футера и меню
     display : block;
     padding : 25px 0px 0px 30px;
     position: relative;
+
+    &:hover {
+      color: #b7c3c8;
+    }
 
     &::before {
       content    : '\f095';
@@ -778,6 +1253,11 @@ $bgcolor:#263238; //цвет футера и меню
     position    : relative;
     padding-left: 20px;
 
+    &:hover {
+      color: #fff;
+    }
+
+
     &::before {
       content    : '\f105';
       font-size  : 1.8rem;
@@ -806,9 +1286,6 @@ $bgcolor:#263238; //цвет футера и меню
       padding     : 0px 50px 0px 15px;
 
       background-color: #2f3c43;
-
-
-      &::after {}
 
       &::placeholder {
         font-size  : 1.4rem;
@@ -855,16 +1332,12 @@ $bgcolor:#263238; //цвет футера и меню
   }
 }
 
-
-
 .footer-title {
   font-size  : 2.2rem;
   font-family: "Raleway";
   color      : #ffffff;
   font-weight: 700;
 }
-
-
 
 .email {
 
