--- a/css/style.css
+++ b/css/style.css
@@ -1072,7 +1072,7 @@ template {
 }
 .header__text {
   margin-left: auto;
-  margin-right: 50px;
+  margin-right: 14px;
   font-size: 1.5rem;
   line-height: 24px;
   color: #546e7a;
@@ -1089,14 +1089,438 @@ template {
 }
 .header__btn_green {
   background-color: #8bc34a;
-  padding: 12px 21px 9px;
+  padding: 4px 21px 4px;
 }
-.header__btn_red {
+.header__btn_red,
+.header .header__btn-logout {
   background-color: #e74c3c;
-  padding: 11px 14px 10px;
+  padding: 4px 14px 4px;
 }
 .header__bottom {
   background-color: #263238;
+}
+.header__box {
+  min-width: 400px;
+  height: 45px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__circle {
+  display: none;
+  height: 34px;
+  width: 34px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 10px;
+  position: relative;
+}
+.header__circle.active {
+  display: block;
+}
+.header__circle::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #a0a0a0;
+  font-size: 1.4rem;
+}
+.header__circle span {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 18px;
+  right: -7px;
+  top: -7px;
+  font-size: 1.1rem;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+}
+
+.header__btn-ligin--on {
+  display: none;
+}
+.header__btn-ligin--on.header__btn_red {
+  display: none;
+}
+.header__btn-ligin--on.header__btn-logout {
+  display: block;
+}
+
+.header__btn-logout {
+  display: none;
+}
+
+.user {
+  display: none;
+  margin-left: 10px;
+  margin-right: 25px;
+  padding-right: 25px;
+}
+.user.active {
+  display: block;
+}
+.user__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.user__image {
+  margin-right: 15px;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.user__info {
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.4rem;
+  line-height: 24px;
+}
+.user__name {
+  font-weight: 500;
+  color: #222222;
+}
+.user__money {
+  color: #8bc34a;
+  font-weight: 700;
+}
+.user__box {
+  position: relative;
+}
+.user__box:hover .user__menu {
+  visibility: visible;
+}
+.user__menu {
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: absolute;
+  top: 69px;
+  right: 6px;
+  background-color: #fff;
+  width: 170px;
+  z-index: 5;
+  padding-bottom: 18px;
+  padding-top: 12.5px;
+  border-width: 0.833px;
+  border-color: #cccccc;
+  border-style: solid;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+          box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+}
+.user__menu a:hover {
+  color: #8bc34a;
+}
+.user__menu i {
+  padding-right: 10px;
+  margin-left: 20px;
+  color: #a2cf6e;
+  font-size: 14px;
+  font-family: icomoon;
+}
+.user__menu li {
+  padding: 12.5px 0px;
+}
+
+.icon-angle-down {
+  position: absolute;
+  top: 3px;
+  right: -16px;
+  font-size: 1.6rem;
+  color: #707070;
+}
+
+.notification span {
+  background-color: #fcb322;
+}
+.notification:hover::before {
+  color: #000;
+}
+.notification__box {
+  position: relative;
+}
+.notification__box:hover .notification__menu {
+  visibility: visible;
+}
+.notification__menu {
+  position: absolute;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  visibility: hidden;
+  top: 62px;
+  right: 10px;
+  border-width: 0.833px;
+  border-bottom: none;
+  border-color: #cccccc;
+  border-style: solid;
+  background-color: #fff;
+  width: 270px;
+  z-index: 5;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+          box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+  padding-bottom: 10px;
+}
+.notification__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 20px;
+  height: 87px;
+  border-top: 1px solid #cccccc;
+}
+.notification__image {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.notification__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
+  margin-right: auto;
+}
+.notification__help {
+  font-size: 1.1rem;
+  font-family: "Roboto", sans-serif;
+  color: #84b743;
+  line-height: 24px;
+}
+.notification__date {
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  color: #707070;
+}
+.notification__icon {
+  padding-right: 30px;
+  font-size: 1.6rem;
+  color: #b0bec5;
+}
+.notification__icon.active {
+  color: #ef6c00;
+}
+
+.message span {
+  background-color: #ef6c00;
+}
+.message:hover::before {
+  color: #000;
+}
+.message__box {
+  position: relative;
+}
+.message__box:hover .message__menu {
+  visibility: visible;
+}
+.message__menu {
+  position: absolute;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  visibility: hidden;
+  top: 62px;
+  right: 10px;
+  border-width: 0.833px;
+  border-bottom: none;
+  border-color: #cccccc;
+  border-style: solid;
+  background-color: #fff;
+  width: 270px;
+  z-index: 5;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+          box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+  padding-bottom: 10px;
+}
+.message__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 20px;
+  height: 87px;
+  border-top: 1px solid #cccccc;
+}
+.message__image {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.message__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
+  margin-right: auto;
+}
+.message__name {
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  color: #263238;
+  font-weight: 700;
+}
+.message__help {
+  font-size: 1.1rem;
+  font-family: "Roboto", sans-serif;
+  color: #84b743;
+  line-height: 24px;
+}
+.message__date {
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  color: #707070;
+}
+.message__icon {
+  padding-right: 30px;
+  font-size: 1.6rem;
+  color: #b0bec5;
+}
+.message__icon.active {
+  color: #ef6c00;
+}
+
+.basket span {
+  background-color: #bfde9c;
+}
+.basket:hover::before {
+  color: #000;
+}
+.basket__content {
+  padding-left: 15px;
+}
+.basket__box {
+  position: relative;
+}
+.basket__box:hover .basket__menu {
+  visibility: visible;
+}
+.basket__menu {
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  visibility: hidden;
+  position: absolute;
+  top: 62px;
+  right: 6px;
+  border-width: 0.833px;
+  border-color: #cccccc;
+  border-style: solid;
+  background-color: #fff;
+  width: 270px;
+  z-index: 5;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+          box-shadow: 0px 2px 10px 0px rgba(216, 216, 216, 0.75);
+  padding-bottom: 10px;
+}
+.basket__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  border-bottom: 0.833px solid #cccccc;
+}
+.basket__image {
+  width: 73px;
+  height: auto;
+}
+.basket__title, .basket__price {
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #263238;
+}
+.basket__category {
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  color: #8bc34a;
+  line-height: 22px;
+}
+.basket__total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 50px;
+  padding: 0px 35px 0px 25px;
+}
+.basket__btn {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #f4f6f5;
+  font-weight: 700;
+}
+
+.total__title {
+  margin-right: 20px;
+}
+.total__title, .total__price {
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: #263238;
+}
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 16px;
+}
+.btn__card {
+  display: inline-block;
+  padding: 10px 22px 10px 20px;
+  margin-right: 5px;
+  margin-left: 17px;
+  background: #95c85a;
+}
+.btn__checkout {
+  display: inline-block;
+  padding: 10px;
+  background-color: #e85647;
+  margin-right: 15px;
 }
 
 .menu__list {
@@ -1369,6 +1793,7 @@ template {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
 .slick-slider {
   position: relative;
   max-width: 100%;
@@ -1595,7 +2020,7 @@ template {
 
 .footer {
   background-color: #263238;
-  padding: 100px 0px 90px 0px;
+  padding: 90px 0px 0px 0px;
 }
 .footer__row {
   display: -webkit-box;
@@ -1604,12 +2029,16 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 0px 0px 90px 0px;
 }
 .footer__column {
   max-width: 270px;
 }
+.footer__item {
+  padding: 25px 0px 0px 0px;
+}
 .footer__title {
-  padding: 15px 0px 25px 0px;
+  padding: 0px 0px 25px 0px;
   position: relative;
 }
 .footer__title::after {
@@ -1640,6 +2069,9 @@ template {
   padding: 35px 0px 0px 30px;
   position: relative;
 }
+.footer__marker:hover {
+  color: #b7c3c8;
+}
 .footer__marker::before {
   content: "";
   font-size: 1.8rem;
@@ -1652,6 +2084,9 @@ template {
   display: block;
   padding: 25px 0px 0px 30px;
   position: relative;
+}
+.footer__phone:hover {
+  color: #b7c3c8;
 }
 .footer__phone::before {
   content: "";
@@ -1683,6 +2118,9 @@ template {
 .footer__link {
   position: relative;
   padding-left: 20px;
+}
+.footer__link:hover {
+  color: #fff;
 }
 .footer__link::before {
   content: "";
