--- a/#sources/scss/media.scss
+++ b/#sources/scss/media.scss
@@ -3,6 +3,27 @@
 // Large Devices, Wide Screens
 @media only screen and (max-width : 1200px) {}
 
+@media only screen and (max-width : 1000px) {
+  .header {
+    &__text {
+      display: none;
+    }
+  }
+
+  .footer {
+    padding: 40px 0px 0px 0px;
+
+    &__row {
+      flex-wrap: wrap;
+      padding  : 0px 0px 40px 0px;
+    }
+
+    &__column {
+      flex: 0 1 50%;
+    }
+  }
+}
+
 // Medium Devices, Desktops
 @media only screen and (max-width : 992.98px) {}
 
@@ -11,10 +32,135 @@
   .container-fluid {
     padding: 0px 15px;
   }
+
+  .header__inner {
+    justify-content: flex-start;
+  }
+
+  .header__logo {
+    margin-right: auto;
+  }
+
+  .header__box {
+    margin-right: 60px;
+  }
+
+  .message__box,
+  .basket__box,
+  .notification__box {
+    display: none;
+  }
+
+
+
+}
+
+.menu {
+  &__list {
+    flex-direction      : column;
+    justify-content     : space-evenly;
+    position            : absolute;
+    // margin-top       : 60px;
+    left                : 0;
+    top                 : 0;
+    height              : 100%;
+    width               : 100%;
+    background-color    : #263238;
+    // margin        : 0;
+    // padding       : 0;
+    z-index             : 90;
+    overflow            : auto;
+    @include tr(0px, -100%, 0px);
+    @include anim(0.4s, 0s);
+
+    &.active {
+      @include tr(0px, 0px, 0px);
+    }
+  }
+
+
+
+  li {
+
+    &+li {
+
+      margin-left  : 0px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.notification__menu,
+.message__menu,
+.basket__menu {
+  top     : 62px;
+  // right: 10px;
+  left    : -10px;
+}
+
+
+@media only screen and (max-width : 580px) {}
+
+@media only screen and (max-width : 570px) {
+  .footer {
+    &__column {
+      flex: 0 1 100%;
+    }
+
+    &__row {
+      flex-direction: column;
+      padding-left  : 20px;
+    }
+  }
+
+}
+
+@media only screen and (max-width : 500px) {
+  .header {
+    &__logo {
+      display: none;
+    }
+  }
+
+  .header__inner {
+    justify-content: center;
+  }
+
+  .header__box {
+    margin-right: 40px;
+  }
 }
 
 // Extra Small Devices, Phones 
-@media only screen and (max-width : 479.98px) {}
+@media only screen and (max-width : 479.98px) {
+
+  .notification__box,
+  .basket__box,
+  .message__box {
+    display: none;
+  }
+
+  .header__box {
+    justify-content: flex-start;
+  }
+
+  .create {
+    width    : 100%;
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width : 400px) {
+  .header {
+    &__logo {
+      display: none;
+    }
+
+    &__inner {
+      justify-content: center;
+    }
+  }
+}
 
 // Custom, iPhone Retina 
 @media only screen and (max-width : 320px) {}
